// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form with one child 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
}

.c3 {
  margin: 0;
  padding: 0;
  border: 0;
  font: inherit;
  font-size: 100%;
  vertical-align: baseline;
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
}

.c2 {
  margin: 0;
  padding: 0;
  border: 0;
  font: inherit;
  font-size: 100%;
  vertical-align: baseline;
  font-weight: 600;
  color: #262D33;
  margin-right: 0.5rem;
  font-size: 0.875rem;
}

.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  font: inherit;
  font-size: 100%;
  vertical-align: baseline;
}

<form
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2"
      htmlFor={undefined}
    >
      label
    </label>
    <input
      className="c3"
      id={undefined}
      name="name"
      type="text"
    />
  </div>
</form>
`;

exports[`Form with two invalid children 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
}

.c3 {
  margin: 0;
  padding: 0;
  border: 0;
  font: inherit;
  font-size: 100%;
  vertical-align: baseline;
  border: solid 1px #ED3B53;
  background-color: #FFF2F4;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
}

.c2 {
  margin: 0;
  padding: 0;
  border: 0;
  font: inherit;
  font-size: 100%;
  vertical-align: baseline;
  font-weight: 600;
  color: #262D33;
  margin-right: 0.5rem;
  font-size: 0.875rem;
}

.c4 {
  margin: 0;
  padding: 0;
  border: 0;
  font: inherit;
  font-size: 100%;
  vertical-align: baseline;
  color: #B2121F;
  margin-right: 0.5rem;
  margin-top: 0.5rem;
  font-size: 0.75rem;
}

.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  font: inherit;
  font-size: 100%;
  vertical-align: baseline;
}

<form
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2"
      htmlFor={undefined}
    >
      label1
    </label>
    <input
      className="c3"
      id={undefined}
      name="name1"
      type="text"
    />
    <div
      className="c4"
    >
      error1
    </div>
  </div>
  <div
    className="c1"
  >
    <label
      className="c2"
      htmlFor={undefined}
    >
      label2
    </label>
    <input
      className="c3"
      id={undefined}
      name="name2"
      type="text"
    />
    <div
      className="c4"
    >
      error2
    </div>
  </div>
</form>
`;
